used bref for all bibliographic references

--- a/OMG_OntoIOp_current.tex
+++ b/OMG_OntoIOp_current.tex
@@ -1708,17 +1708,17 @@ it. Some parts (namely symbol maps, \syntax{combination}s
  and the construct \syntax{monomorphic};
 these are marked in {\institutionsOnly bold italics}) of the abstract
 syntax need a more sophisticated and more general category-theoretic
-foundation in terms of institutions [\ref{Institutions}]. More
+foundation in terms of institutions [\bref{Institutions}]. More
 specifically, the notion of institute needs to be replaced by that of
-institutional logic [\ref{Meseguer89}], and analogously for
-comorphisms [\ref{Comorphisms}].
-% and the Grothendieck construction [\ref{GrothendieckInstitutions}].
+institutional logic [\bref{Meseguer89}], and analogously for
+comorphisms [\bref{Comorphisms}].
+% and the Grothendieck construction [\bref{GrothendieckInstitutions}].
 
 Details of the mapping of the abstract syntax into the semantic
 domains given by the heterogeneous logic environment will be provided later.
 
 %An extension of this semantic background to non-monotonic logics,
-%using the theory of [\ref{ArieliAvron2000}], needs still to be worked out.
+%using the theory of [\bref{ArieliAvron2000}], needs still to be worked out.
 
 % \begin{tikzpicture}[%
 % hookarrow/.style={right hook->},
@@ -3835,19 +3835,19 @@ This annex sketches scenarios that outline how DOL is intended to be applied.  F
 The OWL Time ontology\footnote{\url{http://www.w3.org/TR/2006/WD-owl-time-20060927/}} covers temporal concepts such as instants and intervals and has been designed for describing the temporal content of Web pages and the temporal properties of Web services.  While OWL is suitable for these intended applications, only a first-order axiomatization is capable of faithfully capturing all relevant notions, such as the trichotomy of the “before” relation: One instant is either before another one, or at the same time, or after.  Moreover, a relationship between facts expressed in terms of instants and facts expressed in terms of intervals (both of which is, independently, possible in OWL), can only be established via first-order logic, \eg by declaring an interval of length zero equivalent to an instant. 
 
 A separate first-order axiomatization of OWL Time exists
-[\ref{OWLTime},\ref{OWLSTime}].  DOL would instead allow for modeling
+[\bref{OWLTime},\bref{OWLSTime}].  DOL would instead allow for modeling
 OWL Time as one coherent heterogeneous ontology, using OWL and, \eg,
 Common Logic.\CLnote{This is also a use case for multiple namespaces:
   OWL supports namespaces, CL doesn't.}  For the temporal description
 logic $\mathcal{DLR_{US}}$ for knowledge bases and logic-based
-temporal conceptual data modelling [\ref{Artale02},\ref{Artale07a}];
+temporal conceptual data modelling [\bref{Artale02},\bref{Artale07a}];
 $\mathcal{DLR_{US}}$ combines the propositional temporal logic with
 the {\em Since} and {\em Until} operators and the (non-temporal)
 description logic $\mathcal{DLR}$ and can be regarded as an expressive
 fragment of the first-order temporal logic $L^{since, until}$. Within
 DOL, this would enable one to have `lightweight' time aspects with OWL
 Time, which are then properly formalised with $\mathcal{DLR_{US}}$ or
-a leaner variant TDL-Lite [\ref{Artale07time}], where notions such as
+a leaner variant TDL-Lite [\bref{Artale07time}], where notions such as
 (some time) ``before'' are given a formal semantics of the intended
 meaning that the plain OWL Times human-readable object property does
 not have. The latter, then, would enable the modeller to represent the
@@ -3864,7 +3864,7 @@ the ontology about, e.g., the distinction how a human brain is part of
 a human (humans cannot live without it), versus how a hand is part of
 a human (humans can live without it), versus how the hand is part of,
 say, a boxer, which is essential to the boxer but only for has long as
-he is a boxer [\ref{AGK08}].
+he is a boxer [\bref{AGK08}].
 
 \end{usecase}
 
