DOL is also about modeling and specification

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -656,7 +656,7 @@ The reader is encouraged to report any technical or editing issues/problems with
 
 \chapter{Scope}
 \pagenumbering{arabic} 
-This \IS specifies the Distributed Ontology Language (DOL) designed to achieve ontology integration and interoperability. DOL is a language for distributed knowledge representation across multiple ontologies, particularly ontologies that have been formalized in different ontology languages.
+This \IS specifies the Distributed Ontology, Modeling and Specification Language (DOL) designed to achieve ontology integration and interoperability. DOL is a language for distributed knowledge representation across multiple ontologies, particularly ontologies that have been formalized in different ontology languages.
 
 The following features are essential to the design of this \IS
 \CLnote{[date=D:201110060000+02'00']Proposal for restructuring this (due to Michael Gr{\"u}ninger):
@@ -713,12 +713,12 @@ stating sentences about them
 \item mappings between services and devices, and definitions of service and device interoperability.
 \end{enumerate}
 
-This \IS describes the syntax and the semantics of the Distributed Ontology Language (DOL) by defining an abstract syntax and an associated model-theoretic semantics for DOL. DOL does not provide a new elementary ontology language, but provides a layer to be used on top of existing elementary ontology languages which enables ontology engineers to formally express links between ontologies written in different languages and stored at different Web locations. The purpose of such distributed ontologies is enabling a greater extent of interoperability between data and services in complex application settings.
+This \IS describes the syntax and the semantics of the Distributed Ontology, Modeling and Specification Language (DOL) by defining an abstract syntax and an associated model-theoretic semantics for DOL. DOL does not provide a new elementary ontology language, but provides a layer to be used on top of existing elementary ontology languages which enables ontology engineers to formally express links between ontologies written in different languages and stored at different Web locations. The purpose of such distributed ontologies is enabling a greater extent of interoperability between data and services in complex application settings.
 
 \chapter{Conformance}
 
 This clause defines conformance criteria for languages and logics that
-can be used with the distributed ontology language DOL, as well as
+can be used with the distributed ontology, modeling and specification language DOL, as well as
 conformance criteria for serializations, translations and
 applications. This International Standard describes the conformance
 with DOL of a number of ontology languages, namely OWL 2, Common
@@ -1399,12 +1399,12 @@ interoperability concerning the creation, meaning, computation, use, transfer, a
 TODO Michael: explain the relationship to other notions of interoperability (from existing standards)
 \end{note}
 
-\sclause{Distributed Ontologies and the Distributed Ontology Language}
+\sclause{Distributed Ontologies and the Distributed Ontology, Modeling and Specification Language}
 
 \begin{definitions}
   \termdefinition{distributed ontology\synonym hyperontology}{collection of \termref{ontologies,} possibly written in different \termref{ontology languages}, linked by \termref{links}}
 
-  \termdefinition{distributed ontology language\synonym
+  \termdefinition{distributed ontology, modeling and specification language\synonym
   DOL}{language for formalizing \termref{distributed ontologies}, whose syntax and semantics are specified in this \IS}
 
 \begin{note}
@@ -1424,7 +1424,7 @@ As listed below, these symbols and abbreviations are generally for the main clau
 \symboldef{CLIF}{Common Logic Interchange Format}
 \symboldef{CURIE}{Compact URI expression}
 \symboldef{DDL}{Distributed description logic}
-\symboldef{DOL}{Distributed Ontology Language }
+\symboldef{DOL}{Distributed Ontology, Modeling and Specification Language }
 \symboldef{EBNF}{Extended Backus-Naur Form}
 \symboldef{E-connections}{a modular ontology language (closely related to DDL)}
 \symboldef{F-logic}{frame logic, an object-oriented ontology language}
@@ -1472,7 +1472,7 @@ Longstreth,date=D:201110060000+02'00']{Terry Longstreth:
   than that: also interfacability, such that the joint use in a common
   application scenario is enabled.}
 
-  In complex applications, which involve multiple ontologies with overlapping concept spaces, data mapping is also required on a higher level of abstraction, viz.\ between different ontologies, and is then called ontology alignment.  While ontology alignment is most commonly studied for ontologies formalized\CLnote{spell-check everything for British} in the same ontology language, the different ontologies used by complex applications may also be written in different ontology languages. This international standard faces this diversity not by proposing yet another ontology language that would subsume all the others.  Instead, it accepts the diverse reality and formulates means (on a sound and formal semantic basis) to compare and integrate ontologies that are written in different formalisms. It specifies DOL (Distributed Ontology Language), a formal language for expressing not only ontologies but also links between ontologies formalized in different ontology languages.
+  In complex applications, which involve multiple ontologies with overlapping concept spaces, data mapping is also required on a higher level of abstraction, viz.\ between different ontologies, and is then called ontology alignment.  While ontology alignment is most commonly studied for ontologies formalized\CLnote{spell-check everything for British} in the same ontology language, the different ontologies used by complex applications may also be written in different ontology languages. This international standard faces this diversity not by proposing yet another ontology language that would subsume all the others.  Instead, it accepts the diverse reality and formulates means (on a sound and formal semantic basis) to compare and integrate ontologies that are written in different formalisms. It specifies DOL (Distributed Ontology, Modeling and Specification Language), a formal language for expressing not only ontologies but also links between ontologies formalized in different ontology languages.
 
 Thus, it gives interoperability a formal grounding and makes heterogeneous ontologies and services based on them amenable to checking of coherence (\eg consistency, conservativity, intended consequences, and compliance).
 
@@ -1495,7 +1495,7 @@ Within the DOL framework, existing ontologies in conforming established language
 \CLnote[type=todo]{Get rid of formal \should/\shall language (e.g.\ in clause headers: \should/\shall applies to conforming implementations anyway, rather than to this standard itself!) – not necessary in an informative clause. TM: I did this in the clause headings, and for the design part also in the clause texts.}
 
 
-This clause is informative. Its purpose is to briefly describe the purposes of the Distributed Ontology Language (DOL) and the overall guiding principles and constraints on its syntax and semantics.
+This clause is informative. Its purpose is to briefly describe the purposes of the Distributed Ontology, Modeling and Specification Language (DOL) and the overall guiding principles and constraints on its syntax and semantics.
 
 \todonote{add somewhere: DOL is a meta language and can be used with ontology languages of any expressiveness. As a Meta-language, DOL provides a framework for combining and relating ontologies written in specific ontology languages.
 However, DOL cannot be used for writing new basic ontologies.}
@@ -2798,7 +2798,7 @@ $
 \sclause{Translational semantics of DOL language constructs}
 
 The translational semantics uses Common Logic as a foundational framework
-for the distributed ontology language DOL, similar to what set theory
+for the distributed ontology, modeling and specification language DOL, similar to what set theory
 provides for general mathematical theories. This semantics assumes
 that each involved ontology language is mapped to \Clogic by a weakly
 exact translation.  The semantics is defined by first translating a
@@ -3615,7 +3615,7 @@ The actual translations are specified in \bref{OntoGraph}.
 \infannex{Institutional semantics} \label{an:institution}
 
 Note that the institute-based semantics for DOL does not cover
-\syntax{SYMBOL-MAP}s, \syntax{combination}s and the construct \syntax{monomorphic}.  The institutional semantics will provide a mechanism for giving a semantics to the full distributed ontology language (DOL).
+\syntax{SYMBOL-MAP}s, \syntax{combination}s and the construct \syntax{monomorphic}.  The institutional semantics will provide a mechanism for giving a semantics to the full distributed ontology, modeling and specification language (DOL).
 
 
 Institutions generalise institute to arbitary signature mappings
