--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -655,8 +655,10 @@ The reader is encouraged to report any technical or editing issues/problems with
 
 
 \chapter{Scope}
+\ednote{compare the scope in 6.2 of the RFP}
 \pagenumbering{arabic} 
-This \IS specifies the Distributed Ontology, Modeling and Specification Language (DOL) designed to achieve OSM integration and interoperability. DOL is a language for distributed knowledge representation across multiple OSMs, particularly OSMs that have been formalized in different OSM languages.
+This \IS specifies the Distributed Ontology, Modeling and Specification Language (DOL) designed to achieve integration and interoperability of ontologies, specifications and models (OSMs for short). DOL is a language for distributed knowledge representation across multiple OSMs, particularly OSMs that have been formalized in different OSM languages\ednote{maybe: ``logical languages'' instead
+of ``OSM languages''?}.
 
 The following features are essential to the design of this \IS
 \CLnote{[date=D:201110060000+02'00']Proposal for restructuring this (due to Michael Gr{\"u}ninger):
@@ -947,7 +949,7 @@ For the purposes of this document, the following terms and definitions apply.
 
 \begin{definitions}
 
-  \termdefinition{OSM}{set of expressions (like \termref{non-logical symbols}, \termref{sentences} and \termref{structuring} elements) in a  given \termref{OSM language}}%
+  \termdefinition{OSM (ontology, specification or model)}{set of expressions (like \termref{non-logical symbols}, \termref{sentences} and \termref{structuring} elements) in a  given \termref{OSM language}}%
 \begin{note}
 	An \termref{OSM} can be written in different \termref{OSM language} \termref{serializations}.
 \end{note}	
