international standard -> OMG specification

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -263,7 +263,7 @@ author=,date=,id=,replyto=,type=}{}%
 \newcommand*{\hasto}{\textbf{has to}\xspace}
 
 % abbreviations
-\newcommand*{\IS}{International Standard\xspace}
+\newcommand*{\IS}{OMG Specification\xspace}
 
 %% Math macros
 %\newcommand{\Mod}{\ensuremath{\mathrm{Mod}}}
@@ -722,7 +722,7 @@ This \IS describes the syntax and the semantics of the Distributed Ontology, Mod
 This clause defines conformance criteria for languages and logics that
 can be used with the distributed ontology, modeling and specification language DOL, as well as
 conformance criteria for serializations, translations and
-applications. This International Standard describes the conformance
+applications. This \IS describes the conformance
 with DOL of a number of OSM languages, namely OWL 2, Common
 Logic, RDF and RDFS, as well as translations among these, in its
 normative annexes.
@@ -730,9 +730,9 @@ normative annexes.
 It is expected that DOL will be used for more languages than this
 normative set of DOL-conformant\CLnote[type=fyi]{coherently rephrased from ``compliant'' to ``conformant''} languages. There will be a
 \textbf{registry for DOL-conformant languages and translations} hosted
-at \url{http://ontohub.org}.  This will ensure that this International
-Standard remains interoperable with past, present and future OSM
-languages, even if they do not appear in this standard or do not even have
+at \url{http://ontohub.org}.  This will ensure that this 
+\IS remains interoperable with past, present and future OSM
+languages, even if they do not appear in this \IS or do not even have
 been standardized (yet).  The
 registry shall also include descriptions of DOL-conformant languages
 and translations (as well as other information needed by implementors
@@ -887,7 +887,7 @@ For any conforming OSM language, logic, and serialization of an OSM language, it
 
 \sclause{Conformance of a serialization with DOL}\label{c:conform:dialect}
 
-While \cref{c:conform:serialization} covered the conformance of serializations of \emph{basic} OSM languages with DOL, this clause addresses serializations of DOL itself.  This international standard specifies one text-based serialization in \aref{a:text-syntax}, but one can specify further serializations according to the following conformance criteria.\todonote[author=Christoph Lange,date=D:201111041524+01'00',type=fyi]{This section is analogous to Common Logic's ``Dialect Conformance''.}
+While \cref{c:conform:serialization} covered the conformance of serializations of \emph{basic} OSM languages with DOL, this clause addresses serializations of DOL itself.  This \IS specifies one text-based serialization in \aref{a:text-syntax}, but one can specify further serializations according to the following conformance criteria.\todonote[author=Christoph Lange,date=D:201111041524+01'00',type=fyi]{This section is analogous to Common Logic's ``Dialect Conformance''.}
 
 It is required that a specification of a conforming serialization be given as a set of mappings from the abstract syntax (\cf \cref{c:abstract-syntax}), where each production rule of the abstract syntax is mapped to a production rule of the concrete syntax.  Instead of such an explicit mapping, an implicit mapping may be provided via a self-contained EBNF for the concrete syntax, whose nonterminal symbols have to match the nonterminal symbols of the EBNF of the abstract syntax.\todonote[type=todo,author=Christoph Lange]{Say that in a more formal way! -- Is it comprehensible?  Does it sufficiently state what we have in mind?}
 
@@ -1374,7 +1374,7 @@ and annotations}
   
 \sclause{Interoperability}
 
-~\todonote[author=Christoph Lange,type=todo]{possibly define some notion of ``interoperability'' that is tailored to this international standard.  At least we need to be able to speak about overall consistency, alignments, etc.}\\
+~\todonote[author=Christoph Lange,type=todo]{possibly define some notion of ``interoperability'' that is tailored to this \IS.  At least we need to be able to speak about overall consistency, alignments, etc.}\\
 ~\todonote[author=Christoph Lange,type=fyi]{Definitions in earlier drafts were not quite helpful:\textLF
 {\textbullet} OSM integration := ``combination of different OSMs into a coherent whole, via alignments''\textLF
 {\textbullet}OSM interoperability := ``relation among OSMs (via OSM alignments) with the goal of using them jointly in an application scenario''\textLF
@@ -1417,7 +1417,7 @@ TODO Michael: explain the relationship to other notions of interoperability (fro
 
 \chapter{Symbols}
 
-As listed below, these symbols and abbreviations are generally for the main clauses of the standard. Some annexes may introduce their own symbols and abbreviations which will be grouped together within that annex.
+As listed below, these symbols and abbreviations are generally for the main clauses of the \IS. Some annexes may introduce their own symbols and abbreviations which will be grouped together within that annex.
 
 \begin{symbols}
 \symboldef{CASL}{Common Algebraic Specification Language, specified by the Common Framework Initiative}
@@ -1474,7 +1474,7 @@ Longstreth,date=D:201110060000+02'00']{Terry Longstreth:
   than that: also interfacability, such that the joint use in a common
   application scenario is enabled.}
 
-  In complex applications, which involve multiple OSMs with overlapping concept spaces, data mapping is also required on a higher level of abstraction, viz.\ between different OSMs, and is then called OSM alignment.  While OSM alignment is most commonly studied for OSMs formalized\CLnote{spell-check everything for British} in the same OSM language, the different OSMs used by complex applications may also be written in different OSM languages. This international standard faces this diversity not by proposing yet another OSM language that would subsume all the others.  Instead, it accepts the diverse reality and formulates means (on a sound and formal semantic basis) to compare and integrate OSMs that are written in different formalisms. It specifies DOL (Distributed Ontology, Modeling and Specification Language), a formal language for expressing not only OSMs but also links between OSMs formalized in different OSM languages.
+  In complex applications, which involve multiple OSMs with overlapping concept spaces, data mapping is also required on a higher level of abstraction, viz.\ between different OSMs, and is then called OSM alignment.  While OSM alignment is most commonly studied for OSMs formalized\CLnote{spell-check everything for British} in the same OSM language, the different OSMs used by complex applications may also be written in different OSM languages. This \IS faces this diversity not by proposing yet another OSM language that would subsume all the others.  Instead, it accepts the diverse reality and formulates means (on a sound and formal semantic basis) to compare and integrate OSMs that are written in different formalisms. It specifies DOL (Distributed Ontology, Modeling and Specification Language), a formal language for expressing not only OSMs but also links between OSMs formalized in different OSM languages.
 
 Thus, it gives interoperability a formal grounding and makes heterogeneous OSMs and services based on them amenable to checking of coherence (\eg consistency, conservativity, intended consequences, and compliance).
 
@@ -1514,13 +1514,13 @@ DOL has been designed and developed with several requirements in mind, all arisi
 
 DOL \should be
 \begin{description}
-\item[free] This international standard \should be freely available for unrestricted use.
+\item[free] This \IS \should be freely available for unrestricted use.
 \item[generally applicable] It \should neither be restricted to OSMs in a specific domain, nor to foundational OSMs, nor to OSMs represented in a specific OSM language, nor to OSMs stored in any specific repositories.
 \item[open] It \should support mapping, integrating, and annotating OSMs across arbitrary internet locations.  It \should make use of existing open standards wherever suitable.  The criteria for extending DOL (see next item) \should be transparent and explicit.
 \item[extensible] It \should provide a framework into which any existing, and, desirably, any future OSM language can be plugged.
 \end{description}
 
-DOL \shall be applicable to any OSM language that has a formal, logic-based semantics or a semantics defined by translation to another OSM language with such a formal semantics. The annotation framework of DOL \should additionally be applicable to the non-logical constructs of such languages. This international standard \todonote[author=Christoph Lange,date=D:201109221211+02'00',type=fyi]{We can afford to say ``shall'' here, as these criteria are really something that we can fully provide} \shall specify formal criteria for establishing the conformance of an OSM language with DOL.  Annexes \shall establish the conformance of a number of relevant OSM languages with DOL; a registry shall offer the possibility to add further (also non-standardized) languages:\CLnote[date=D:201201100956+01'00']{John Sowa: Make it modular with a simple core that can run efficiently on small systems, but can grow indefinitely to support as much as anyone could desire.}
+DOL \shall be applicable to any OSM language that has a formal, logic-based semantics or a semantics defined by translation to another OSM language with such a formal semantics. The annotation framework of DOL \should additionally be applicable to the non-logical constructs of such languages. This \IS \todonote[author=Christoph Lange,date=D:201109221211+02'00',type=fyi]{We can afford to say ``shall'' here, as these criteria are really something that we can fully provide} \shall specify formal criteria for establishing the conformance of an OSM language with DOL.  Annexes \shall establish the conformance of a number of relevant OSM languages with DOL; a registry shall offer the possibility to add further (also non-standardized) languages:\CLnote[date=D:201201100956+01'00']{John Sowa: Make it modular with a simple core that can run efficiently on small systems, but can grow indefinitely to support as much as anyone could desire.}
 
 \begin{description}
 \item[normative] OWL, Common Logic, RDFS\todonote[author=Christoph Lange,date=D:201111021905+01'00']{RIF as well?  See \ticket{16}}
@@ -1540,9 +1540,9 @@ DOL \shall provide syntactic constructs for structuring OSMs regardless of the l
 \end{itemize}
 DOL \shallnot provide its own constructs for expressing sentences.  Instead, it \shall \textit{inherit} the logical language aspects of conforming OSM languages.  It \should be possible to literally include sentences expressed in such OSM languages in a DOL OSM.
 
-DOL \shall provide an initial set of built-in approximation methods and module extraction selectors.  Additionally, it \shall provide a means of referring to approximation methods and module extraction selectors defined externally of this international standard.\todonote[author=Christoph Lange,date=D:201111030047+01'00',type=fyi]{In practice we will use IRIs for that purpose.}
+DOL \shall provide an initial set of built-in approximation methods and module extraction selectors.  Additionally, it \shall provide a means of referring to approximation methods and module extraction selectors defined externally of this \IS.\todonote[author=Christoph Lange,date=D:201111030047+01'00',type=fyi]{In practice we will use IRIs for that purpose.}
 
-DOL \shall provide an initial vocabulary for expressing relations in correspondences (as part of alignments between OSMs).  Additionally, it \shall provide a means of reusing relation types defined externally of this international standard.
+DOL \shall provide an initial vocabulary for expressing relations in correspondences (as part of alignments between OSMs).  Additionally, it \shall provide a means of reusing relation types defined externally of this \IS.
 
 DOL \shallnot provide an annotation vocabulary, i.e.\ it \shall neither provide annotation properties nor datatypes to be used with literal annotation objects. Instead, an informative annex \shall recommend existing annotation vocabularies for use with DOL.
 
@@ -1550,7 +1550,7 @@ DOL \shallnot provide an annotation vocabulary, i.e.\ it \shall neither provide 
 
 \CLnote[type=q-all]{We need to revise this following the agreement to drop the XML and RDF serializations.}In the interest of wide applicability and tool support, DOL \should support multiple alternative serializations.  In particular, there \should be a text serialization targeting human readers and writers, as well as serializations optimized for machine processability.
 
-This international standard \shall specify criteria for a serialization to conform with DOL, and it \shall specify the following conforming serializations:
+This \IS \shall specify criteria for a serialization to conform with DOL, and it \shall specify the following conforming serializations:
 
 \begin{itemize}
 \item a human-readable \textbf{text serialization}
@@ -1571,7 +1571,7 @@ Existing OSMs in existing XML serializations (\eg XCL) or text serializations (\
 
 The structural elements and structural links of DOL \should have a formal, logic-based semantics.
 
-This international standard specifies OSM language translations between conforming languages:\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=fyi]{we shall establish the conformance of an initial set of languages with DOL. As a part of that work we deliver the "onto-logical translation graph" between these languages. Anyone, who wants to establish the conformance of another language with DOL, has to add a node to the graph, and at least one edge from/to an existing node.}
+This \IS specifies OSM language translations between conforming languages:\todonote[author=Christoph Lange,date=D:201110060000+02'00',type=fyi]{we shall establish the conformance of an initial set of languages with DOL. As a part of that work we deliver the "onto-logical translation graph" between these languages. Anyone, who wants to establish the conformance of another language with DOL, has to add a node to the graph, and at least one edge from/to an existing node.}
 
 \begin{itemize}
 \item OSM language translations between their logical language aspects. For any such OSM language translation its properties \should be determined, \eg whether it is a sublogic, a theoroidal translation, etc. \\
@@ -1622,7 +1622,7 @@ clause~\ref{c:abstract-syntax}.
 
 \subsection{DOL allows for expressing links between OSMs.}\label{c:req:links}
 
-DOL provides a syntax for expressing links between OSMs -- logical links as well as alignments.  One use case illustrating both is sketched in  \fref{f:DOL-mapping}. This international standard specifies a set of logical link types and a set of non-logical link types.
+DOL provides a syntax for expressing links between OSMs -- logical links as well as alignments.  One use case illustrating both is sketched in  \fref{f:DOL-mapping}. This \IS specifies a set of logical link types and a set of non-logical link types.
 
 Logical links supported by DOL include:
 \begin{itemize}
@@ -1665,7 +1665,7 @@ the OSM engineering workflow or application setting, it can be
 useful to keep these assumptions implicit, or to make them explicit.
 DOL allows for keeping such assumptions implicit if desired.
 It also allows for explicitly writing them down as annotations
-to the OSM.  This international standard specifies a
+to the OSM.  This \IS specifies a
 translation that expands any DOL OSM with implicit assumptions
 into its explicit counterpart.
 
@@ -1683,7 +1683,7 @@ The following list covers the possible cases where DOL allows for making informa
 
 The DOL serializations also allow for annotating existing OSMs via non-intrusive standoff markup, which points to the annotation subjects from external documentation files or from special embedded comments, extending the comment syntax of the respective OSM language; for XML serializations of OSM languages, RDFa extensions are specified, so that DOL RDF can be embedded.
 
-A list of RDF vocabularies for annotating OSMs is recommended as an annex to this international standard.
+A list of RDF vocabularies for annotating OSMs is recommended as an annex to this \IS.
 
 
 \clause{DOL abstract syntax}\label{c:abstract-syntax}
@@ -1705,7 +1705,7 @@ OSM language and/or serialization)
  
 Additionally, the categories of the abstract syntaxes of any conforming OSM languages (\cf \cref{c:conform:logic}) are also DOL abstract syntax categories.
 
-The following subclauses, one per abstract syntax category, specify the abstract syntax of DOL in EBNF \nisref{ISO/IEC 14977:1996}.  Note that ISO EBNF lacks an operator for ``at least one repetition''.  This standard therefore adopts the following convention: Whenever some sequence \syntax{S} is repeated at least once, we give it a non-terminal identifier of its own (\syntax{RepeatedS = S \{ S \} ;}), or group it as in \syntax{LongerExpression = Foo Bar ( S \{ S \} ) ;}.
+The following subclauses, one per abstract syntax category, specify the abstract syntax of DOL in EBNF \nisref{ISO/IEC 14977:1996}.  Note that ISO EBNF lacks an operator for ``at least one repetition''.  This \IS therefore adopts the following convention: Whenever some sequence \syntax{S} is repeated at least once, we give it a non-terminal identifier of its own (\syntax{RepeatedS = S \{ S \} ;}), or group it as in \syntax{LongerExpression = Foo Bar ( S \{ S \} ) ;}.
 
 \sclause{Distributed OSMs}\label{c:dist-onto}
 
@@ -4163,8 +4163,8 @@ he is a boxer [\bref{AGK08}].
   COLORE, the Common Logic Repository\footnote{\url{http://stl.mie.utoronto.ca/colore/}} is an open repository of more than 150 ontologies as of December 2011, all formalized in Common Logic.  COLORE stores metadata about its ontologies, which are represented using a custom XML schema that covers the following aspects\footnote{\url{http://stl.mie.utoronto.ca/colore/metadata.html}}, without specifying a formal semantics for them:
   \begin{description}
   \item[module provenance] author, date, version, description, keyword, parent ontology\footnote{Note that this use of the term ``module'' in COLORE corresponds
-to the term \termref{structured OSM} in this international standard}
-  \item[axiom source provenance] name, author, year\footnote{Note that this may cover any \termref{sentencs} in the sense of this international standard}
+to the term \termref{structured OSM} in this \IS}
+  \item[axiom source provenance] name, author, year\footnote{Note that this may cover any \termref{sentencs} in the sense of this \IS}
   \item[direct relations] maps (signature morphisms), definitional extension, conservative extension, inconsistency between ontologies, imports, relative interpretation, faithful interpretation, definable equivalence
   \end{description}
 
