started to remove 'allow for'

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -704,7 +704,7 @@ and sentences
 
 The following are outside the scope of this \IS:
 \begin{enumerate}
-\item the (re)definition of elementary OSM languages, \ie languages that allow for declaring non-logical symbols 
+\item the (re)definition of elementary OSM languages, \ie languages that allow the declaration of non-logical symbols 
 \CLnote[type=todo]{We somehow need to rephrase this (here and elsewhere); it reads quite ugly.  Maybe just say ``non-logical symbols''?  Or, if absolutely necessary, reorder the words into ``non-logical ontology symbols''.} 
 and
 stating sentences about them
@@ -859,7 +859,7 @@ The given serialization has to satisfy all of the following conditions:
 \item The serialization shall provide a designated comment construct that can be placed sufficiently flexible as to be uniquely associated with any non-comment construct of the language.  That means, for example, one of the following:
   \begin{itemize}
   \item The serialization provides a construct that indicates the start and end of a comment and may be placed before/after each token that represents a structural element of an OSM.
-  \item The serialization provides line-based comments (ranging from an indicated position to the end of a line) but at the same time allows for flexibly placing line breaks before/after each token that represents a structural element of an OSM.
+  \item The serialization provides line-based comments (ranging from an indicated position to the end of a line) but at the same time allows the flexible placement of line breaks before/after each token that represents a structural element of an OSM.
   \end{itemize}
 \end{itemize}
 
@@ -871,7 +871,7 @@ An OSM language is standoff markup conformant with DOL if one of its serializati
 
 Independently from the conformance levels given above, there is the following hierarchy of conformance \wrt CURIEs as a means of abbreviating IRIs, listed from highest to lowest:
 \begin{description}
-\item[Prefixed CURIE conformance] The given serialization allows that non-logical symbol identifiers have the syntactic form of a CURIE, or any subset of the CURIE grammar that allows named prefixes (\syntax{prefix:reference}).  The serialization is \notrequired to support CURIEs with no prefix.\\
+\item[Prefixed CURIE conformance] The given serialization allows non-logical symbol identifiers to have the syntactic form of a CURIE, or any subset of the CURIE grammar that allows named prefixes (\syntax{prefix:reference}).  The serialization is \notrequired to support CURIEs with no prefix.\\
   Informative comment: In this case, a prefix map with multiple prefixes \may be used to map the non-logical symbol identifiers of a basic OSM to IRIs in multiple namespaces (\cf \cref{c:map-ids})
 \item[Unprefixed names only] The given serialization only supports CURIEs with no prefix, or any subset of the grammar of the \syntax{REFERENCE} nonterminal in the CURIE grammar.\\
   Informative comment: In this case, a binding for the empty prefix \hasto be declared, as this is the only possibility of mapping the identifiers of the basic OSM to IRIs, which are located in one flat namespace.
@@ -902,9 +902,9 @@ However, details about aspects of an OSM that do not have a formal, logic-based 
 
 \sclause{Conformance of an application with DOL}\label{c:conform:application}
 
-In practice, DOL-aware \emph{applications} are also allowed to deal with documents that are not conforming with DOL according to the criteria established in \cref{c:conform:document}.  However, an application only \emph{conforms} with DOL if it is capable of producing DOL-conforming documents as its output when requested.
+In practice, DOL-aware \emph{applications} may also deal with documents that are not conforming with DOL according to the criteria established in \cref{c:conform:document}.  However, an application only \emph{conforms} with DOL if it is capable of producing DOL-conforming documents as its output when requested.
 
-We expect most DOL-aware applications to support a fixed (possibly extensible) set of OSM languages conforming with DOL.  It is, for example, possible that a DOL-aware application only supports OWL and Common Logic.  In that case, the application is allowed to process documents that mix OWL and Common Logic ontologies \emph{without} explicitly declaring the respective logics, as the respective syntaxes of OWL and Common Logic allow for telling such ontologies apart by looking at the keywords used.  However, for DOL conformance, that application has to be capable of exporting documents with explicit references to the logics used.
+We expect most DOL-aware applications to support a fixed (possibly extensible) set of OSM languages conforming with DOL.  It is, for example, possible that a DOL-aware application only supports OWL and Common Logic.  In that case, the application may process documents that mix OWL and Common Logic ontologies \emph{without} explicitly declaring the respective logics, as the respective syntaxes of OWL and Common Logic allow for telling such ontologies apart by looking at the keywords used.  However, for DOL conformance, that application has to be capable of exporting documents with explicit references to the logics used.
 
 ~\CLnote{applications need to strip DOL annotations from embedded fragments in other OSM languages}
 
